--- a/src/assets/scss/layout/contactus/_contactus.scss
+++ b/src/assets/scss/layout/contactus/_contactus.scss
@@ -1,15 +1,4 @@
-// .contact{
-//     // background-image: url(@/assets/imgs/contactus/imgcontact.png); /* Update with your image path */
-//     background-image: url(@/assets/imgs/contactus/contactimg.svg); /* Update with your image path */
-//     background-size: cover;
-//     background-color: #e80a0a;
-//     background-repeat: no-repeat;
-//     background-position: center;
-//     height: 90vh;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
+
 .contact {
   background-image: url(/src/assets/imgs/contactus/contactimg.svg),
     radial-gradient(circle at center, var(--blue-2), var(--blue-2) 65%);
@@ -24,27 +13,23 @@
 }
 .react-international-phone-input-container .react-international-phone-input {
   width: -webkit-fill-available;
-  padding: 1.3rem 0.7rem;
+    padding: 1.375rem 0.75rem;
+    border-radius: 0rem 0.375rem 0.375rem 0rem;
   margin: 10px 0px;
 }
-.react-international-phone-flag-emoji {
-  width: var(--react-international-phone-flag-width, 30px);
-  height: var(--react-international-phone-flag-height, 35px);
-  box-sizing: border-box;
+.react-international-phone-country-selector {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.react-international-phone-country-selector-button__button-content {
+  background-color: white;
+  padding: 0.6rem 0rem;
+  border-radius: 0.375rem 0rem 0rem 0.375rem;
 }
 .react-international-phone-country-selector-button__button-content:hover {
-  background-color: transparent;
+  background-color: white;
 }
-// .contact-form-container {
-//   background-image: url(@/assets/imgs/contactus/imgcontact.png); /* Update with your image path */
-//   background-size: contain;
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   height: 90vh;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
 
 .contact-form {
   // background: rgba(0, 0, 0, 0.6);
