--- a/src/assets/scss/layout/scroll/_scroll.scss
+++ b/src/assets/scss/layout/scroll/_scroll.scss
@@ -8,6 +8,7 @@
     font-size: 1rem;
     font-weight: 400;
     cursor: pointer;
+    z-index: 15;
 }
 .scrollup:hover{
     color: var(--color-white);
